<resources>
    <string name="app_name">RecycleApp</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">Keep up the good work!</string>
    <string name="amount">6</string>
    <string name="separator">/</string>
    <string name="target_amount">8</string>
    <string name="items_recycled">Items Recycled</string>
    <string name="item_list">Item List</string>
    <string name="add_items">Add Items</string>
    <string name="profile">Profile</string>
    <string name="add_goal">Add Goal</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="current_items">CURRENT ITEMS</string>
    <string name="categories">CATEGORIES</string>
    <string name="glass">Glass</string>
    <string name="plastic">Plastic</string>
    <string name="paper">Paper</string>
    <string name="electronics">Electronics</string>
    <string name="organics">Organics</string>
    <string name="textiles">Textiles</string>
    <string name="daily_total">DAILY TOTAL</string>
    <string name="grand_total">GRAND TOTAL</string>
    <string name="user_name">Amy Liu</string>
    <string name="level">Level</string>
    <string name="level_number">2</string>
    <string name="current_exp">40</string>
    <string name="exp">/50 EXP</string>
    <string name="date">17 Dec</string>



</resources>
