<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".itemlist">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


    </android.support.design.widget.AppBarLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:gravity="top" >


        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <ImageButton
                android:id="@+id/back_button"
                android:paddingTop="10dp"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:text="prev"
                android:layout_alignParentLeft="true"
                android:background="@android:color/white"
                app:srcCompat="@drawable/baseline_keyboard_backspace_black_48dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/item_list"
                android:textColor="#5d5d5d"
                android:textSize="20sp"
                android:fontFamily="@font/montserratbold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:letterSpacing="0.15"
                android:paddingLeft="30dp"
                android:paddingTop="80dp"
                android:text="@string/most_popular"
                android:textColor="#9d9d9d"
                android:textSize="13sp"
                android:fontFamily="@font/montserratsemibold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:letterSpacing="0.15"
                android:paddingLeft="30dp"
                android:paddingTop="205dp"
                android:text="@string/current_items"
                android:textColor="#9d9d9d"
                android:textSize="13sp"
                android:fontFamily="@font/montserratsemibold" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/plus_button"
            android:paddingTop="320dp"
            android:paddingLeft="320dp"
            android:layout_width="wrap_content"
            android:layout_height="430dp"
            android:scaleType="fitCenter"
            android:text="next"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/plusbutton"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>